--- a/ios/TopNews/LaunchScreen.storyboard
+++ b/ios/TopNews/LaunchScreen.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,17 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchImage" translatesAutoresizingMaskIntoConstraints="NO" id="2Eq-ii-9jZ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchImage" translatesAutoresizingMaskIntoConstraints="NO" id="jkN-ZM-WEM">
+                                <rect key="frame" x="60" y="116" width="255" height="255"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jkN-ZM-WEM" secondAttribute="height" multiplier="1:1" id="60b-bq-GDK"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.87450980389999999" green="0.36862745099999999" blue="0.38431372549999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="2Eq-ii-9jZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="V8R-Ok-dME"/>
-                            <constraint firstItem="2Eq-ii-9jZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cmx-zB-2pY"/>
-                            <constraint firstItem="2Eq-ii-9jZ" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="q0Z-7h-Rer"/>
-                            <constraint firstItem="2Eq-ii-9jZ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="rUs-FT-8mS"/>
+                            <constraint firstItem="jkN-ZM-WEM" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="KDf-aK-QhI"/>
+                            <constraint firstItem="jkN-ZM-WEM" firstAttribute="centerY" secondItem="Bcu-3y-fUS" secondAttribute="centerY" constant="-100" id="UNW-Zi-3Fu"/>
+                            <constraint firstItem="jkN-ZM-WEM" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="60" id="Z34-K3-yrC"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -37,9 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchImage" width="1024" height="1024"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="launchImage" width="341.5" height="341.5"/>
     </resources>
 </document>
